--- a/templates_input/iiner/techDemo.partial.html
+++ b/templates_input/iiner/techDemo.partial.html
@@ -5,42 +5,42 @@
 
     <!--
         Multi line comment test
-        <spike [print]="$local.person.name"></spike>
+        <spike sp-print="scope.person.name"></spike>
 
-        <div>[[ $local.person.name ]]</div>
+        <div>{{ scope.person.name }}</div>
     -->
 
     <!-- Print test with @spike tag-->
-    <spike [print]="$local.person.name"></spike>
+    <spike sp-print="scope.person.name"></spike>
 
     <!-- Print test with @div tag-->
-    <div [print]="$local.person.name"></div>
+    <div sp-print="scope.person.name"></div>
 
     <!-- Print test with brackets-->
-    <div>[[ $local.person.name ]]</div>
-    [[ $menu.getCategories($local.pageTitle) ]]
+    <div>{{ scope.person.name }}</div>
+    {{ $menu.getCategories(scope.pageTitle) }}
 
     <!-- Translation test -->
-    <div [translation]="test_translation"></div>
+    <div sp-translation="test_translation"></div>
 
     <!-- Translation with params test -->
-    <div [translation]="test_translation_with_params" [params]="$local.person.id, $local.person.name"></div>
+    <div sp-translation="test_translation_with_params" [params]="scope.person.id, scope.person.name"></div>
 
     <!-- Translation variation test -->
-    <div [translation]="[[ $message.get('test_translation') ]]"></div>
+    <div sp-translation="{{ $message.get('test_translation') }}"></div>
 
     <!-- Placeholder test -->
-    <div [placeholder]="test_placeholder"></div>
+    <div sp-placeholder="test_placeholder"></div>
 
     <!-- Placeholder test params -->
-    <div [placeholder]="test_placeholder" [params]="$local.person.id, $local.person.name"></div>
+    <div sp-placeholder="test_placeholder" [params]="scope.person.id, scope.person.name"></div>
 
     <!-- Placeholder test -->
-    <input placeholder="[[ $message.get('test_placeholder') ]]" />
+    <input placeholder="{{ $message.get('test_placeholder') }}" />
 
     <!-- Condition IF test with @spike tag-->
-    <spike [if]="$local.user.id > 10">
-        <span [if]="$local.user.id > 11">Show me if user id > 11</span>
+    <spike [if]="scope.user.id > 10">
+        <span [if]="scope.user.id > 11">Show me if user id > 11</span>
         Show me if user id > 10
         <div>
             Some inner child 1
@@ -51,7 +51,7 @@
     </spike>
 
     <!-- Condition IF test with @div tag-->
-    <div [if]="$local.user.id < 10">
+    <div [if]="scope.user.id < 10">
         Remove me if user id > 10
         <div>
             Some inner child 1
@@ -62,7 +62,7 @@
     </div>
 
     <!-- Condition IF-ELSE test with @spike tag-->
-    <spike [if]="$local.user.id > 10">
+    <spike [if]="scope.user.id > 10">
         Show me if user id > 10
     </spike>
     <spike [else]>
@@ -71,10 +71,10 @@
 
 
     <!-- Condition IF-ELSEIF-ELSE test with @spike tag-->
-    <spike [if]="$local.user.id > 10">
+    <spike [if]="scope.user.id > 10">
         Show me if user id > 10 <div id="dsd"></div>
     </spike>
-    <spike [elseif]="$local.user.id < 5">
+    <spike [elseif]="scope.user.id < 5">
         Show me if user id < 5
     </spike>
     <spike [else]>
@@ -82,7 +82,7 @@
     </spike>
 
     <!-- Condition SWITCH test -->
-    <spike [switch]="$local.status">
+    <spike [switch]="scope.status">
 
         <spike [case]="200" [break]>
             <div class="success">OK</div>
@@ -100,39 +100,39 @@
     </spike>
 
     <!-- For test -->
-    <spike [for]="index in $local.names">
-        <p>Name: [[user.name]]</p>
+    <spike [for]="index in scope.names">
+        <p>Name: {{user.name}}</p>
     </spike>
 
-    <spike [for]="user, index in $local.names">
-        <p>Index: [[index]]; Name: [[user.name]]</p>
+    <spike [for]="user, index in scope.names">
+        <p>Index: {{index}}; Name: {{user.name}}</p>
     </spike>
 
-    <div [for]="user, index in $local.names">
-        <p>Index: [[index]]; Name: [[user.name]]</p>
+    <div [for]="user, index in scope.names">
+        <p>Index: {{index}}; Name: {{user.name}}</p>
     </div>
 
     <!-- Foreach test -->
-    <spike [foreach]="user in $local.names">
-        <p>Name: [[user.name]]</p>
+    <spike [foreach]="user in scope.names">
+        <p>Name: {{user.name}}</p>
     </spike>
 
-    <spike [foreach]="user, index in $local.names">
-        <p>Index: [[index]]; Name: [[user.name]]</p>
+    <spike [foreach]="user, index in scope.names">
+        <p>Index: {{index}}; Name: {{user.name}}</p>
     </spike>
 
-    <div [foreach]="user, index in $local.names">
-        <p>Index: [[index]]; Name: [[user.name]]</p>
+    <div [foreach]="user, index in scope.names">
+        <p>Index: {{index}}; Name: {{user.name}}</p>
     </div>
 
     <!-- While test -->
 
-    <spike [while]="$local.count < 10">
-        <spike [js]="$local.count++"></spike>
+    <spike [while]="scope.count < 10">
+        <spike [js]="scope.count++"></spike>
     </spike>
 
     <!-- Events test -->
-    <button [click]="app.router.location([[['/post/1']]])">Click me</button>
+    <button [click]="app.router.location({{['/post/1'}}])">Click me</button>
     <select [change]="$menu.changeOption(event)">
         <option value="1">Test</option>
     </select>
@@ -141,7 +141,7 @@
     <spike [template]="templateName"></spike>
 
     <!-- Partial include test -->
-    <spike [include]="$somePartial" [params]="user: $local.user"></spike>
+    <spike [include]="$somePartial" [params]="user: scope.user"></spike>
     <spike [include]="$somePartial"></spike>
 
     <!-- Inline JS test -->
