--- a/templates_input/watch/watch.partial.html
+++ b/templates_input/watch/watch.partial.html
@@ -1,28 +1,8 @@
 import Message from spike.core.Message;
 
-<div class="loginController">
+<div class="testController">
 
-    <div class="box">
 
-        <div class="logo"></div>
-
-        <form autocomplete="off" sp-submit="scope.login(event)" sp-watch>
-
-            <input type="text" name="loginName" placeholder="{{ Message.get('login_placeholder') }}"/>
-            <input type="password" name="password" placeholder="{{ Message.get('password_placeholder') }}"/>
-
-            <button type="submit" class="default" sp-translation="login_button"></button>
-
-            <p class="error {{ scope.model.error === true ? 'show' : 'hide' }}" sp-translation="login_error"></p>
-        </form>
-
-        <spike sp-js="var x = 'ok'"></spike>
-        <div sp-watch>
-            {{ x }}
-        </div>
-
-    </div>
-    <div class="footer" sp-translation="ac_version"></div>
 
 </div>
 
