--- a/templates_input/new/test.html
+++ b/templates_input/new/test.html
@@ -16,5 +16,10 @@ import ListItem from app.elements.list.ListItem;
         <spike sp-template="app.elements.common.spinner"></spike>
     </spike>
 
+    <spike sp-template="app.elements.common.spinner" sp-trigger="whenSpinner"></spike>
+
+    <input type="text" name="username" />
+    <input type="password" name="password" />
+
 </div>
 
