--- a/templates_input/new/module/common/element/table/tableFilter.html
+++ b/templates_input/new/module/common/element/table/tableFilter.html
@@ -1,4 +1,5 @@
 <div class="tableFilterTemplate" sp-watch>
+    <spike sp-template="Test" sp-trigger="asdas"></spike>
     <spike sp-for="filter in scope.options.filters">
         <spike sp-switch="filter.type">
             <spike sp-case="'buttons'">
