--- a/templates_output/dom.html
+++ b/templates_output/dom.html
@@ -1,116 +1,23 @@
 <script type="text/html" id="templates_input_new_test_html">
-<div class="addRoleModal modal modal-large" id="id-1"> 
- <div class="modal-header col-xs-12 between-xs" id="id-2">
-   Add role 
+<spike-replacement replacement-id="1" type="WatchProcessor" sp-id="element-1"></spike-replacement> 
+<div sp-watch="watcher-0" sp-id="watcher-0"> 
+ <div class="form-group"> 
+  <spike-replacement replacement-id="2" type="EventProcessor"></spike-replacement> 
+  <button type="button" class="btn btn-primary" spike-unbinded="" spike-event-click="scope.copyPrivileges()" spike-event-click-link="{{linkId}}" sp-id="spike-event-1">copy privilages from</button> 
+  <spike-replacement replacement-id="3" type="BindProcessor"></spike-replacement> 
+  <select class="form-control" spike-event-change="scope.selectRoleIdForCopy=event.target.value;" spike-event-change-link="{{linkId}}" spike-unbinded=""> <option>{{role.name}}</option>  </select> 
  </div> 
- <div class="modal-aside col-xs-3" id="id-3"> 
-  <div class="modal-aside-content row" id="id-4"> 
-   <div class="modal-headline" id="id-5">
-     Roles: 
-   </div> 
-   <spike-replacement replacement-id="1" type="WatchProcessor"></spike-replacement> 
-   <form sp-watch="watcher-0" id="id-6"> 
-    <spike-replacement replacement-id="2" type="TemplateProcessor"></spike-replacement> 
-    <div class="form-group" id="id-7"> 
-     <spike-replacement replacement-id="3" type="BindProcessor"></spike-replacement> 
-     <input type="text" id="id-8" spike-event-keyup="scope.newRoleName=event.target.value;" spike-event-keyup-link="{{linkId}}" spike-unbinded=""> 
-     <spike-replacement replacement-id="4" type="EventProcessor"></spike-replacement> 
-     <button type="button" class="btn btn-primary btn-block" id="id-9" spike-unbinded="" spike-event-click="scope.addRole()" spike-event-click-link="{{linkId}}">Add role</button> 
-    </div> 
-   </form> 
-  </div> 
+ <div class="form-group"> 
+  <spike-replacement replacement-id="6" type="EventProcessor"></spike-replacement> 
+  <button type="button" class="btn btn-primary" spike-unbinded="" spike-event-click="scope.copyPrivileges()" spike-event-click-link="{{linkId}}" sp-id="spike-event-2">copy privilages from</button> 
+  <spike-replacement replacement-id="7" type="BindProcessor"></spike-replacement> 
+  <select class="form-control" spike-event-change="scope.selectRoleIdForCopy=event.target.value;" spike-event-change-link="{{linkId}}" spike-unbinded=""> <option>{{role.name}}</option>  </select> 
  </div> 
- <spike-replacement replacement-id="5" type="WatchProcessor"></spike-replacement> 
- <div class="modal-content col-xs-9 {{ scope.currentRole ? '' : 'hide' }}" sp-watch="watcher-1" id="id-10"> 
-  <spike-replacement replacement-id="6" type="IfProcessor"></spike-replacement> 
-  <form id="id-11"> 
-   <div class="col-xs-12" id="id-12"> 
-    <div class="modal-content-headline" id="id-13">
-      Role name 
-    </div> 
-    <div class="row" id="id-14"> 
-     <div class="col-xs-6" id="id-15"> 
-      <div class="form-group" id="id-16"> 
-       <input type="text" class="form-control input-block" value="{{scope.currentRole.name}}" id="id-17"> 
-      </div> 
-      <div class="form-group" id="id-18"> 
-       <label class="btn btn-primary" id="id-19">copy privilages from</label> 
-       <spike-replacement replacement-id="8" type="TemplateProcessor"></spike-replacement> 
-      </div> 
-     </div> 
-     <div class="col-xs-6 text-xs-right" id="id-20"> 
-      <div class="block" id="id-21"> 
-       <spike-replacement replacement-id="9" type="EventProcessor"></spike-replacement> 
-       <button class="btn btn-primary" type="button" disabled id="id-22" spike-unbinded="" spike-event-click="scope.openGeneralExcludes()" spike-event-click-link="{{linkId}}">General Excludes</button> 
-      </div> 
-     </div> 
-    </div> 
-   </div> 
-   <div class="col-xs-12" id="id-23"> 
-    <div class="row" id="id-24"> 
-     <div class="col-xs-6" id="id-25"> 
-      <div class="modal-content-headline" id="id-26">
-        Users in role 
-      </div> 
-      <div class="box box-small" id="id-27"> 
-       <div class="box-header" id="id-28">
-         Users in role 
-       </div> 
-      </div> 
-     </div> 
-     <div class="col-xs-6" id="id-29"> 
-      <div class="modal-content-headline" id="id-30">
-        Search user 
-      </div> 
-      <div class="box box-small" id="id-31"> 
-       <div class="row box-toolbar" id="id-32"> 
-        <div class="col-xs-6" id="id-33"> 
-         <div class="form-group" id="id-34"> 
-          <label for="search-by-name" id="id-35">Search by name</label> 
-          <div class="form-group" id="id-36"> 
-           <input type="text" class="form-control" id="search-by-name"> 
-           <button class="btn btn-primary btn-icon" type="submit" id="id-37"><i class="fa fa-search" id="id-38"></i></button> 
-          </div> 
-         </div> 
-        </div> 
-        <div class="col-xs-6" id="id-39"> 
-         <div class="form-group" id="id-40"> 
-          <label for="search-by-id" id="id-41">Search by ID</label> 
-          <div class="form-group" id="id-42"> 
-           <input type="text" class="form-control" id="search-by-id"> 
-           <button class="btn btn-primary btn-icon" type="submit" id="id-43"> <i class="fa fa-search" id="id-44"></i> </button> 
-          </div> 
-         </div> 
-        </div> 
-       </div> 
-       <div class="box-header" id="id-45"> 
-        <div class="col-xs-6 text-xs-left" id="id-46"> 
-         <div class="block" id="id-47">
-           Name 
-         </div> 
-        </div> 
-        <div class="col-xs-6 text-xs-right" id="id-48"> 
-         <div class="block" id="id-49">
-           ID 
-         </div> 
-        </div> 
-       </div> 
-       <ul class="search-users-list" id="id-50"> 
-        <li id="id-51"><label for="search-user-id1" id="id-52"> <input type="checkbox" class="form-control" id="search-user-id1"> <span class="search-username" id="id-53">UserName</span> <span class="search-userid text-xs-right" id="id-54">10</span> </label> </li> 
-        <li id="id-55"><label for="search-user-id2" id="id-56"> <input type="checkbox" class="form-control" id="search-user-id2"> <span class="search-username" id="id-57">UserName</span> <span class="search-userid text-xs-right" id="id-58">20</span> </label> </li> 
-        <li id="id-59"><label for="search-user-id3" id="id-60"> <input type="checkbox" class="form-control" id="search-user-id3"> <span class="search-username" id="id-61">UserName</span> <span class="search-userid text-xs-right" id="id-62">30</span> </label> </li> 
-        <li id="id-63"><label for="search-user-id4" id="id-64"> <input type="checkbox" class="form-control" id="search-user-id4"> <span class="search-username" id="id-65">UserName</span> <span class="search-userid text-xs-right" id="id-66">40</span> </label> </li> 
-        <li id="id-67"><label for="search-user-id5" id="id-68"> <input type="checkbox" class="form-control" id="search-user-id5"> <span class="search-username" id="id-69">UserName</span> <span class="search-userid text-xs-right" id="id-70">50</span> </label> </li> 
-       </ul> 
-      </div> 
-     </div> 
-    </div> 
-   </div> 
-  </form> 
-  <spike-replacement replacement-id="7" type="IfProcessor"></spike-replacement> 
-  <div class="col-xs-12" id="id-71">
-    [text] 
-  </div> 
+ <div class="form-group"> 
+  <spike-replacement replacement-id="10" type="EventProcessor"></spike-replacement> 
+  <button type="button" class="btn btn-primary" spike-unbinded="" spike-event-click="scope.copyPrivileges()" spike-event-click-link="{{linkId}}" sp-id="spike-event-3">copy privilages from</button> 
+  <spike-replacement replacement-id="11" type="BindProcessor"></spike-replacement> 
+  <select class="form-control" spike-event-change="scope.selectRoleIdForCopy=event.target.value;" spike-event-change-link="{{linkId}}" spike-unbinded=""> <option>{{role.name}}</option>  </select> 
  </div> 
 </div>
 </script>
